fix ProjectOpeningTest, fix deadlock due to incorrect implementation of "openProject(project: Project)"
GitOrigin-RevId: 995ef8631ca0d0d8aca02fd6f086351df90bf5d7